<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <GridLayout
        android:id="@+id/boardFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/controlFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleFrame">


    </GridLayout>

    <LinearLayout
        android:id="@+id/titleFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/levelTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/goalCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_count"
            android:visibility="invisible"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="5dp"
            />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/levelInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp"

            >

            <TextView
                android:id="@+id/moveCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_count"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/levelInfo"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startLevel"
        android:text="@string/start_resume_level"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/controlFrame"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        >

        <ImageButton
            android:id="@+id/backLevel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_tint"
            android:contentDescription="@string/back_level"
            android:src="@drawable/back"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

        <ImageButton
            android:id="@+id/undoMove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_tint"
            android:contentDescription="@string/undo_move"
            android:src="@drawable/undo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

        <ImageButton
            android:id="@+id/playPause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_tint"
            android:contentDescription="@string/pause_symbol"
            android:src="@drawable/play"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

        <ImageButton
            android:id="@+id/restart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_tint"
            android:contentDescription="@string/reset_symbol"
            android:src="@drawable/restart"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

        <ImageButton
            android:id="@+id/nextLevel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_tint"
            android:contentDescription="@string/next_symbol"
            android:src="@drawable/next"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>